fixed spacing in html, validated hex color,

--- a/styles/form.css
+++ b/styles/form.css
@@ -15,7 +15,7 @@ main {
     padding: 1em;
     background-color: white;
     max-width: 600px;
-    box-shadow: 0 0 10px rgba(0,0,0,0,1);
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 .form-group {
     margin-bottom: 1.5em;
